tests/golden/parts-ingress/manifests/nginx-frontend-oasp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx-frontend
  name: nginx-frontend-oasp
spec:
  selector:
    matchLabels:
      k8ify.ref-slug: oasp
      k8ify.service: nginx-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8ify.ref-slug: oasp
        k8ify.service: nginx-frontend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8ify.service
                operator: In
                values:
                - nginx-frontend
            topologyKey: kubernetes.io/hostname
      containers:
      - image: nginx-frontend:prod
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 60
        name: nginx-frontend-oasp
        ports:
        - containerPort: 80
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 60
      - image: php-backend:prod
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 4480
          timeoutSeconds: 60
        name: php-backend-oasp
        ports:
        - containerPort: 4480
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 4480
          timeoutSeconds: 60
      restartPolicy: Always
status: {}
