tests/golden/parts-ingress/manifests/nginx-frontend-oasp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx-frontend
  name: nginx-frontend-oasp
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "1180"
    port: 1180
    targetPort: 4480
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: nginx-frontend
status:
  loadBalancer: {}
